# my-portfolio

./: .dockerignore  .env.backup.20260526-000139  .env.example  .gitignore  .mcp.json  AGENTS.md  ANALYSIS_FRAMEWORK_AND_METHODOLOGY.md  ANALYSIS_MANIFEST.txt  CHANGELOG.md  CLAUDE.md  CROSS_CHECK_REPORT.md  CRYPTO_ANALYSIS_FRAMEWORK.md  CRYPTO_SIGNAL_ANALYSIS_SETUP.md  DISPATCH_223.md  EXTRACTION_REPORT.md  FINANCIAL_REPORT_2026-02-14.html  INDEX_UKRAINE_ANALYSIS_FEB19_2026.md  PLAN.md  PLAN_DELETE_TRANSACTION.md  Portfolio-CLI-Plan.md  README.md  README_UKRAINE_ANALYSIS.txt  Sample.md  Template.md  UKRAINE_INVESTMENT_ANALYSIS_FEB14_2026.md  UKRAINE_INVESTMENT_SUMMARY_FEB19_2026.md  biggest_investors_moves_report.md  biggest_investors_news_report_feb6.md  crypto_analysis_feb14_2026.md  extract_transactions.py  market_data.json  news.sh  portfolio.backup-20260526-001600.sql  portfolio.backup-20260526-001726.sql  portfolio.cron.json  portfolio.csv  portfolio_daily_returns.json  portfolio_daily_returns.py  portfolio_transactions.csv  prompt.md  (+9 more)
.claude/: settings.json
.claude-plugin/: marketplace.json
.orchestrator/: issue-253-responsive-fix.md
Example/: Template.md  example_portfolio_daily_returns.json
claudedocs/: 20260204-diskriminatsiya-realizatsii.html  audit_226_checklist.md  minimax-m3-free-spec.md
data/: transactions.json
docs/: api-response-standardization-plan.md  chart-library-comparison.md  cli-command-analysis.md  crontab-schedule.md  dashboard-cloudflare-architecture.md  fastapi-api-method-analysis.md  issue-300-mcp-stateful-fix.md  openai-secure-mcp-tunnel.md  pg-cron.md  platform-adapters.md  production-ready-plan.md  repository-layout.md  smartdca-strategy.md  transaction-spec.md  widget-contract.md
duckdb/: database.py
hdrezka/: .coverage  AUDIT_REPORT.md  DECISIONS.md  MASTER_PROMPT.md  NEXT.md  PRD.md  README.md  TASKS.md  WORKLOG.md  pyproject.toml
hdrezka/.claude/: ralph-loop.local.md
hdrezka/scripts/: download_to_zima.sh  get_stream.py  list_translators.py
hdrezka/src/hdrezka/: __init__.py  __main__.py  api.py  cli.py  config.py  exceptions.py  output.py  runtime.py  types.py  utils.py
hdrezka/tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_config.py  test_exceptions.py  test_live_urls.py  test_utils.py
mcp-searxng/: README.md  pyproject.toml
mcp-searxng/src/mcp_searxng/: __init__.py  __main__.py
news/: 02-02-2026-palantir_ceo_defends_surveillance_tech_as_us_government_contracts_boost_sales.md  02-02-2026-palantir_q4_earnings_government_growth.md  03-02-2026-coeur_mining_cde_new_gold_merger_gains_shareholder_approval.md  03-02-2026-deutsche_bank_db_reports_highest_annual_profit_since_2007_on_strong_investment_bank_performance.md  03-02-2026-ea_beats_quarterly_bookings_estimates_powered_by_new_battlefield_game.md  03-02-2026-merck_expects_slower_earnings_growth_as_it_spends_on_acquisitions.md  03-02-2026-merck_forecasts_2026_sales_below_estimates_on_patent_losses.md  03-02-2026-paypal_shares_sink_on_ceo_exit_disappointing_2026_profit_forecast.md  03-02-2026-pepsico_plans_price_cuts_as_demand_for_its_drinks_and_snacks_slips.md  04-02-2026-ardelyx_receives_new_patent_for_tenapanor.md  04-02-2026-azenta_q1_earnings_call_highlights.md  04-02-2026-bahama_breeze_closure_minor_portfolio_adjustment.md  04-02-2026-cme_group_q4_earnings_call_highlights.md  04-02-2026-entain_eyes_bigger_betmgm_payouts_as_jv_hits_28b_revenue_220m_ebitda_and_guides_higher_for_2026.md  04-02-2026-exclusive_cigna_settles_ftc_insulin_case_commits_to_overhauling_drug_pricing.md  04-02-2026-graphic_packaging_sees_lower_profits_in_2025.md  04-02-2026-healthcare_giants_face_structural_regulatory_shock.md  04-02-2026-jack_henry__associates_q2_earnings_call_highlights.md  04-02-2026-jacks_family_restaurants_deepens_technology_tie_up_with_par.md  04-02-2026-jimmy_choo_owner_capri_trims_revenue_but_cuts_net_debt_sharply.md  04-02-2026-kkr_singtel_fully_acquire_stt_gdc.md  04-02-2026-novo_nordisk_2026_guidance_short_term_noise.md  04-02-2026-oppenheimer_highlights_strong_bookings_after_trane_technologies_tt_q4_beat.md  04-02-2026-reservoir_media_q3_earnings_call_highlights.md  04-02-2026-santander_webster_122b_acquisition.md  04-02-2026-shell_sells_orca_project_stake.md  04-02-2026-texas_instruments_to_buy_silicon_labs_for_231share_targets_450m_synergies_by_2030.md  04-02-2026-ubs_q4_2025_integration_success_raises_cost_savings_to_chf_135b.md  04-02-2026-why_vertivs_vrt_role_in_ai_cooling_is_gaining_strategic_importance.md  04-02-2026-отчет_о_рынке_золота_и_серебра_анализ_падения_и_инвестиционные_уроки.md  04-02-2026_04-27_fmc_dividend_cut_patent_issues.md  04-02-2026_06-24_opec+_compensation_routine_compliance.md  04-02-2026_08-12_waymo_110b_valuation_transforms_alphabet.md  04-02-2026_11-12_palantir_earnings_beat_long_term_signal.md  04-02-2026_11-15_palantir_q4_earnings_government_growth.md  04-02-2026_12-12_spacex_acquires_xai_at_.25_trillion_valuation.md  04-02-2026_13-33_kkr-singtel_fully_acquire_stt_gdc.md  05-02-2026-bristol_myers_forecasts_upbeat_2026_expecting_eliquis_price_cut_to_pay_off.md  05-02-2026-captrust_adds_24bn_in_assets_with_meritage_purchase.md  05-02-2026-europes_central_bank_maintains_interest_rate_with_economic_growth_resilient.md  (+139 more)
portfolio-dashboard/: .gitignore  README.md  index.html  worker.js  wrangler.jsonc.example
portfolio-ts/: .dockerignore  .env.example  .gitignore  Dockerfile  PARITY.md  bunfig.toml  docker-compose.yml  package.json  tsconfig.json  tunnel-client.example.json
portfolio_db/: __init__.py  calculator.py  cli.py  database.py  domain.py  logger.py  migration_service.py  performance_service.py  portfolio_service.py  price_cache_service.py  price_service.py  recalculation_service.py  reporting_service.py  response.py  ts_shim.py  (+2 more)
(+542 files in other folders)
