[project]
name = "portfolio-db"
version = "0.1.0"
description = "Portfolio tracking CLI with PostgreSQL"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3",
    "numpy>=2.0",
    "pandas>=3.0",
    "psycopg[binary]>=3.2",
    "yfinance>=1.1",
]

[project.scripts]
portfolio = "portfolio_db.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["portfolio_db"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100
