[project]
name = "portfolio-db"
version = "0.1.0"
description = "Portfolio tracking CLI with PostgreSQL"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3",
    "numpy>=2.0",
    "pandas>=3.0",
    "psycopg[binary]>=3.2",
    "yfinance>=1.4.0",
]

[project.scripts]
portfolio = "portfolio_db.cli:cli"

[project.optional-dependencies]
migrate = ["duckdb>=0.9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["portfolio_db"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "duckdb>=1.5.3",
    "pytest>=8.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.14",
]

[tool.ruff]
target-version = "py313"
line-length = 100
