[project]
name = "mcp-searxng"
version = "0.1.0"
description = "MCP server for SearXNG web search"
authors = [{name = "Your Name"}]
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-searxng = "mcp_searxng:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_searxng"]

[tool.hatch.build.targets.sdist]
include = ["src/mcp_searxng"]
